<resources>
    <string name="app_name">AppClezAC</string>
    <string name="cedula">Digite su numero de identificación</string>
    <string name="ident">Digite identificación</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_0">0</string>
    <string name="str_x">Borrar</string>
    <string name="str_ir">Entrar</string>//<![CDATA[>]]>
    <string name="str_loading_login">Validando usuario...</string>
    <string name="str_title_alert_error_login">Login</string>
    <string name="ok">Ok</string>
    <string name="str_usuario">Usuario</string>
    <string name="str_nombre">Nombre:</string>
    <string name="str_nro_documento">Nro Documento:</string>
    <string name="str_dias">Dias restantes:</string>
    <string name="entrar">Entrar</string>
    <string name="str_menu_registrar">Registrar usuario</string>
    <string name="str_menu_sincronizar">Sincronizar base de datos</string>
    <string name="str_loading_registrar">Registrando usuario</string>
    <string name="str_menu_registrar_huella">Registrar huella</string>
    <string name="str_menu_configuracion">Configuración</string>
    <string name="str_title_alert_pass">Contraseña</string>
    <string name="cancel">Cancelar</string>
    <string name="str_hint_pass_admin">Digite contraseña de administrador</string>
    <string name="str_title_vinculados">Dispositivos vinculados</string>
    <string name="str_title_nuevos">Dispositivos disponibles</string>
    <string name="str_title_dispositivo_conexion">Dispositivo de conexión</string>
    <string name="str_txt_no_vinculados">No hay dispositivos vinculados</string>
    <string name="str_txt_no_disponibles">No hay dispositivos disponibles</string>
    <string name="str_seleccion_dispositivo">Selección de dispositivo</string>
    <string name="str_menu_buscar">Buscar dispositivos</string>
    <string name="str_menu_guardar">Guardar</string>
    <string name="str_menu_actualizar_huella">Actualizar huella</string>
    <string name="str_loading_actualizar">Actualizando información del usuario</string>
</resources>
