<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.iglesias.c.appgym.LoginActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="centerCrop"
        android:src="@drawable/header_spnning"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/digite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible" />

    <EditText
        android:id="@+id/cedula"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cedula"
        android:inputType="none"
        android:maxLines="1"
        android:textColorLink="@color/colorAccent"
        android:textSize="25sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:rowCount="4">

        <Button
            android:id="@+id/numero_7"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_7"
            android:theme="@style/Buttton_Login"
            android:visibility="visible" />

        <Button
            android:id="@+id/numero_8"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_8"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_9"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_9"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_4"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_4"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_5"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_5"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_6"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_6"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_1"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_1"
            android:theme="@style/Buttton_Login" />

        <Button
            android:id="@+id/numero_2"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_2"
            android:theme="@style/Buttton_Login" />


        <Button
            android:id="@+id/numero_3"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_3"
            android:theme="@style/Buttton_Login" />
        />

        <Button
            android:id="@+id/numero_0"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_0"
            android:theme="@style/Buttton_Login" />
        />

        <Button
            android:id="@+id/sing_in"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_ir"
            android:theme="@style/Buttton_Login" />
        />

        <Button
            android:id="@+id/borrar"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:linksClickable="true"
            android:text="@string/str_x"
            android:theme="@style/Buttton_Login" />
        />


    </GridLayout>

</LinearLayout>