<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iglesias.c.appgym.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:scaleType="centerCrop"
            android:src="@drawable/header_spnning"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/digite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/bienvenido"
                android:textSize="@dimen/text_size_title"
                android:visibility="visible" />

            <EditText
                android:id="@+id/id_edt_nro_registrar"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center_horizontal"
                android:hint="@string/cedula"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorAccent"
                android:textSize="23sp" />

            <ImageButton
                android:id="@+id/id_btn_huella"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/background_btn"
                android:scaleType="centerInside"
                android:src="@drawable/icons8_huella_dactilar_100" />

            <Button
                android:id="@+id/id_btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/str_menu_registrar"
                android:textSize="25sp"
                android:theme="@style/ThemeButtonLogin" />
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>