<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context="com.iglesias.c.appgym.Activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"/>
        <ImageView
            android:id="@+id/imagen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:scaleType="centerCrop"
            android:src="@drawable/header_fitnesspeople"
            android:visibility="visible" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:weightSum="100"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_usuario"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/str_nombre"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />

                <TextView
                    android:id="@+id/id_txt_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="Carlos Iglesias"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/str_nro_documento"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />

                <TextView
                    android:id="@+id/id_txt_documento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="Carlos Iglesias"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/str_dias"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />

                <TextView
                    android:id="@+id/id_txt_dias"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="Carlos Iglesias"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_label" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imagen_usr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_btn"
            android:src="@drawable/header_fitnesspeople"
            android:scaleType="centerCrop"

            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
